# ne-danmaku

./: .gitignore  README.md  config.example.json  main.py  pyproject.toml
assets_danmaku/: blacklist.txt
frontend/: vite.config.js
frontend/src/: style.css
frontend/src/components/: ChatClient.vue  DanmakuDisplay.vue  GiftDisplay.vue  GiftEnum.ts  ResourceManager.ts  SuperChatDisplay.vue
frontend/src/router/: index.js
frontend/src/tests/: GiftDisplayTest.vue  SuperChatDisplayTest.vue
frontend/src/views/: BalanceQuery.vue  BalanceView.vue  DanmakuView.vue
nekocast_danmaku/: app.py  config.py  runner.py
nekocast_danmaku/danmaku/: bilibili_client.py  models.py  onebot_v11_client.py  room_db.py  routes.py  satori_client.py  watcher.py
nekocast_danmaku/danmaku/CashSystem/: CashSystem.py
nekocast_danmaku/danmaku/DanmakuClass/: DanmakuBuilder.py  DanmakuControl.py  DanmakuMessage.py
nekocast_danmaku/danmaku/cash_system/: __init__.py  cash_system.py
nekocast_danmaku/danmaku/danmaku_class/: __init__.py  danmaku_builder.py  danmaku_message.py
nekocast_danmaku/emoji/: cache.py  routes.py
nekocast_danmaku/emotes/: __init__.py  routes.py  scanner.py
